--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -75,6 +75,7 @@
 
 .selected {
     background-color: #09bb07;
+    /* background-color: #b2b2b2;  */
 }
 
 .lesson-container {
@@ -116,4 +117,26 @@
 .lesson-info-right {
     display: flex;
     flex-direction: column;
+}
+
+.notice-container {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    margin: 20rpx auto;
+    border-radius: 6rpx;
+    background-color: #fff6e5;
+}
+
+.notice-container text {
+    color: #716249;
+}
+
+.notice-title {
+    margin: 20rpx 20rpx 10rpx;
+    font-weight: bold;
+}
+
+.notice-content {
+    margin: 0 20rpx 20rpx;
 }
