--- a/app.wxss
+++ b/app.wxss
@@ -11,3 +11,27 @@ page {
 .shadow {
     box-shadow: 2rpx 2rpx 10rpx #ccc;
 }
+
+button.formButton {
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    display: inline;
+    position: static;
+    border: 0;
+    padding-left: 0;
+    padding-right: 0;
+    border-radius: 0;
+    font-size: 0rpx;
+    color: transparent;
+}
+
+button.formButton::after {
+    content: '';
+    width: 0;
+    height: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    display: none;
+    background-color: transparent;
+}
